# freeradius-oracle

./: CMakeLists.txt  README.md  configure.ac  rlm_oracle.c  vector.h
cmake/modules/: FindOCI.cmake
